fixed the background of the body to not overflow

--- a/form-appointment/css/main.css
+++ b/form-appointment/css/main.css
@@ -544,17 +544,6 @@ ul {
 	box-shadow: 0 0 4px #5E4F55;
 }
 
-.black-overlay {
-	width: 100%;
-	height: 100%;
-	z-index: 5;
-	background: black;
-	opacity: .7;
-	position: absolute;
-	margin-top: -50px;
-	margin-bottom: -500px;
-	visibility: hidden;
-}
 
 
 
