--- a/form-appointment/css/responsive.css
+++ b/form-appointment/css/responsive.css
@@ -2,12 +2,15 @@
 
 	html,
 	body {
-		height: 0;
-		min-height: 100%;
+		height: 100%;
+	}
+
+	html {
+		padding: 20px 0;
 	}
 		
 	.wrapper {
-		margin: 50px auto;
+		margin: 0 auto;
 		height: 650px;
 		width: 400px;
 	}
@@ -23,12 +26,6 @@
 	.black-overlay {
 		height: 115%;
 	}
-
-/*	.deats-wrapper {
-		top: 30%;
-		width: 30%;
-		right: 35%;
-	}*/
 
 }
 
